created no retrain notebook, cleaned up

--- a/embeddingcompression.ipynb
+++ b/embeddingcompression.ipynb
@@ -150,7 +150,7 @@
     "embeddings_size=embeddings.shape[1]\n",
     "checkpoint_every=100\n",
     "\n",
-    "save_path='results/compression1/'\n",
+    "save_path='results/compression/'\n",
     "\n",
     "import os\n",
     "if not os.path.exists(save_path):\n",
