--- a/GLUE_no_retrain.ipynb
+++ b/GLUE_no_retrain.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Sam\\miniconda3\\envs\\torch\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the required libraries\n",
     "import os\n",
@@ -28,8 +19,8 @@
     "from matplotlib.ticker import MaxNLocator\n",
     "from tqdm import tqdm\n",
     "\n",
-    "from apx import ApproxEmbed, ApxSVD\n",
-    "from glue_score import GLUE_TASKS, make_model, Glue, plot"
+    "from apx import ApproxEmbed, ApxSVD, train_apx\n",
+    "from glue_score import GLUE_TASKS, make_model, Glue, get_dataloaders, validate, get_metrics"
    ]
   },
   {
@@ -45,10 +36,19 @@
     "\n",
     "epochs=5\n",
     "lr=1e-5\n",
+    "levels=8\n",
+    "channels=8\n",
+    "bits=8\n",
+    "neurons=64\n",
+    "nn_levels=2\n",
     "\n",
-    "saved_dict = torch.load('runs\\8_8.pth')\n",
+    "epochs=100\n",
+    "batch_size=2**14\n",
+    "checkpoint_every=100\n",
     "\n",
-    "runs=[\"compressed fixed\", \"compressed SVD\"]#\"normal\", \"compressed adaptive\", "
+    "save_path = 'results/compression_finetuned'\n",
+    "\n",
+    "norms = [1, 1.25, 1.5, 1.75, 2]#\"normal\", \"compressed adaptive\", "
    ]
   },
   {
@@ -200,14 +200,57 @@
    "source": [
     "RESULTS={}\n",
     "for task in list(GLUE_TASKS.keys())[:2]:\n",
-    "    results={}\n",
+    "    \n",
     "    print(task)\n",
-    "\n",
     "    args=GLUE_TASKS[task]\n",
     "    model=make_model('prajjwal1/bert-tiny',args)\n",
-    "    H,V = Glue(model, tokenizer, task, args, epochs=epochs, steps_validate=0.2)\n",
-    "        \n",
-    "    results[run]={'history':H,'validation':V}\n",
+    "    \n",
+    "    Glue(model, tokenizer, task, args, epochs=epochs, steps_validate=0.2);\n",
+    "\n",
+    "    results={}\n",
+    "    for norm in norms:\n",
+    "\n",
+    "        # clone the model to not modify the original\n",
+    "        apx_model = make_model('prajjwal1/bert-tiny',args).load_state_dict(model.state_dict())\n",
+    "\n",
+    "        embeddings = apx_model.embeddings.word_embeddings.weight.to(device)\n",
+    "\n",
+    "        apx = ApproxEmbed(levels = levels, \n",
+    "                feature_dim = channels,\n",
+    "                num_words = embeddings.shape[0],\n",
+    "                output_dims = embeddings.shape[1],\n",
+    "                feature_std = 0.1,\n",
+    "                feature_bias = 0.0,\n",
+    "                codebook_bitwidth=bits,\n",
+    "                neurons = neurons,\n",
+    "                nn_levels=nn_levels)\n",
+    "\n",
+    "        train_apx(apx, embeddings, epochs, batch_size, checkpoint_every, save_path);\n",
+    "        apx.fix_indices()\n",
+    "        model.bert.embeddings.word_embeddings = apx.to('cuda')\n",
+    "\n",
+    "        _, val_dataloader = get_dataloaders(args, task, batch_size)\n",
+    "        metrics = get_metrics(args)\n",
+    "\n",
+    "        val_metrics = validate(model, tokenizer, val_dataloader, metrics, args)\n",
+    "        results[norm]=val_metrics\n",
+    "        print(norm, results)\n",
+    "\n",
+    "    # clone the model to not modify the original\n",
+    "    apx_model = make_model('prajjwal1/bert-tiny',args).load_state_dict(model.state_dict())\n",
+    "\n",
+    "    embeddings = apx_model.embeddings.word_embeddings.weight.to(device)\n",
+    "\n",
+    "    apxSVD = ApxSVD(model.bert.embeddings.word_embeddings.weight, 5)\n",
+    "    model.bert.embeddings.word_embeddings = apxSVD.to('cuda')\n",
+    "\n",
+    "    _, val_dataloader = get_dataloaders(args, task, batch_size)\n",
+    "    metrics = get_metrics(args)\n",
+    "\n",
+    "    val_metrics = validate(model, tokenizer, val_dataloader, metrics, args)\n",
+    "    results['SVD']=val_metrics\n",
+    "    print('SVD', results)\n",
+    "\n",
     "    RESULTS[task]=results"
    ]
   },
@@ -275,7 +318,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.0"
   },
   "orig_nbformat": 4,
