updated glue notebooks

--- a/GLUE_retrain.ipynb
+++ b/GLUE_retrain.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transformers.utils.logging.set_verbosity_error\n",
+    "transformers.utils.logging.set_verbosity_error()\n",
     "device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained('prajjwal1/bert-tiny')\n",
@@ -242,7 +242,7 @@
     "if not os.path.exists(save_path):\n",
     "    os.makedirs(save_path)\n",
     "\n",
-    "torch.save(RESULTS, save_path+'glue_results.pth')"
+    "torch.save(RESULTS, save_path+'glue_results_retrain.pth')"
    ]
   },
   {
@@ -280,11 +280,11 @@
     }
    ],
    "source": [
-    "from glue_score import plot_results\n",
+    "from glue_score import plot_results_retrain\n",
     "import torch\n",
     "\n",
-    "run_dict=torch.load('results/glue_results.pth')\n",
-    "plot_results(run_dict)"
+    "run_dict=torch.load('results/glue_results_retrain.pth')\n",
+    "plot_results_retrain(run_dict)"
    ]
   }
  ],
